[package]
name = "mini-dropbox-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
dashmap = "6.1.0"
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std",
] }
